# gdex

./: .dir-locals.el  .flake8  .gitignore  .zenodo.json  CHANGELOG.md  CHANGES.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: syntax-and-unit-tests.yml  test.yml
demo/: demo.conllu  demo_quaxa.py
gdex/: VulGer_additions.txt  __init__.py  de_whitelist.txt  de_whitelist_additions.txt
quax/: __init__.py  quax.py  reader.py
quaxa/: __init__.py  quaxa.py  reader.py
scripts/: download_de_whitelist.py
scripts/data/: de_whitelist_additions.txt
test/: test_quax.py  test_quaxa.py
tests/: test_gdex.py  test_quaxa.py
