[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gdex"
description = "Good Dictionary Examples – Rule-based Sentence Scoring Algorithm"
authors = [
    {name = "Ulf Hamster", email = "554c46@gmail.com"},
    {name = "Gregor Middell", email = "gregor.middell@bbaw.de"},
    {name = "Natalie Sürmeli", email = "natalie.suermeli@uni-potsdam.de"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic"
]
requires-python = ">=3.12"
dynamic = ["readme", "version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/zentrum-lexikographie/gdex"

[tool.coverage.run]
omit = ["tests/**/*.py"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "gdex.version.__version__"}
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements.dev.txt"] }

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
"gdex" = ["de_whitelist.txt", "py.typed", "VulGer.csv"]
